# whisper-dictate

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CONTRIBUTING.md  LICENSE  Makefile  README.md  commit.txt  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml
docs/: REVIEW_SUMMARY.md  architecture.md  build.md  transcription-optimization.md
legacy_cli/: cli.py
packaging/pyinstaller/: whisper_dictate_gui.spec
research/: parakeet-windows-compatibility.md  parakeet_windows_test.py  phase2-investigation-summary.md
scripts/: prefetch_model.py
tests/: __init__.py  test_app_context.py  test_app_prompt_dialog_logic.py  test_app_prompts.py  test_audio.py  test_config.py  test_credentials.py  test_glossary.py  test_gui_settings.py  test_hotkeys.py  test_integration.py  test_llm_cleanup.py  test_llm_debug_logging.py  test_logging_config.py  test_prompt.py  test_settings_store.py  test_transcription.py
whisper_dictate/: __init__.py  __main__.py  app_context.py  app_prompt_dialog.py  app_prompts.py  audio.py  cli.py  config.py  constants.py  credentials.py  environment.py  glossary.py  glossary_dialog.py  gui.py  gui_components.py  hotkeys.py  llm.py  llm_cleanup.py  logging_config.py  model_utils.py  prompt.py  settings_store.py  transcription.py
