[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "numpy>=2.3.4",
    "openai>=1.40",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "sounddevice>=0.5.3",
]

[project.scripts]
dictate = "whisper_dictate.cli:main"
dictate-gui = "whisper_dictate.gui:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
